--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.mainTitle {
+.main_title {
     border-style: solid;
     border-color: #659a9f;
     border-radius: 1vmin;
-    
+
     color: #659a9f; 
     font-family: Helvetica; 
     font-size: 500%
