Added small description + edited border

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .main_title {
     border-style: solid;
-    border-color: #659a9f;
+    border-color: #87ced4;
     border-radius: 1vmin;
 
     color: #659a9f; 
