--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
+* {
+    font-family: Helvetica; 
+}
+
+h1 {
+    text-align: center;
+    vertical-align: middle;
+}
+
+p {
+    font-size: 2vmin; 
+    text-align: center
+}
+
 .main_title {
     border-style: solid;
     border-color: #87ced4;
     border-radius: 1vmin;
 
     color: #659a9f; 
-    font-family: Helvetica; 
     font-size: 500%
-}
-
-h1 {
-    text-align: center;
-    vertical-align: middle;
 }
