--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
     font-family: Helvetica; 
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 h1 {
     text-align: center;
     vertical-align: middle;
