--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ a {
     color: white;
 }
 
+
 html, body {
     max-width: 100%;
     overflow-x: hidden;
@@ -21,7 +22,7 @@ h1 {
     vertical-align: middle;
 }
 
-h1:hover, a:hover {
+h1:hover {
     animation: fadeIn 5s;
     color: transparent;
     -webkit-text-stroke: 3px #659a9f;
@@ -31,6 +32,16 @@ p {
     font-family: Helvetica; 
 
     text-align: center
+}
+
+/* effects */
+a:link, a:visited {
+    color: white;
+}
+  
+a:hover {
+    color: transparent;
+    -webkit-text-stroke: 2px #44686b;
 }
 
 /* classes */
