--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ h1:hover {
 
 p {
     font-family: Helvetica; 
-
     text-align: center
 }
 
@@ -49,6 +48,11 @@ a:hover {
 .main_title {
     color: #659a9f; 
     font-size: 750%;
+}
+
+.lower_heading {
+    color: #000;
+    font-size: 550%;
 }
 
 .highlight {
