Centered text again

--- a/style.css
+++ b/style.css
@@ -49,9 +49,8 @@ a:hover {
     color: #659a9f; 
     font-size: 750%;
 
-    margin: auto;
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .lower_heading {
