--- a/style.css
+++ b/style.css
@@ -48,9 +48,7 @@ a:hover {
 .main_title {
     color: #659a9f; 
     font-size: 750%;
-
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    vertical-align: middle
 }
 
 .lower_heading {
