--- a/style.css
+++ b/style.css
@@ -58,6 +58,14 @@ h1:hover {
     margin-top: -9px;
 }
 
+.first_section > p {
+    position: absolute;
+    top: 60%;
+    left: 0;
+    right: 0;
+    margin-top: -9px;
+}
+
 .main_title {
     color: #659a9f; 
     font-size: 750%;
