--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1:hover {
     white-space: nowrap; 
 }
 
-.first_section > div {
+.centered_box {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -67,7 +67,7 @@ h1:hover {
 
 .lower_heading {
     color: #000;
-    font-size: 550%;
+    font-size: 750%;
 }
 
 .highlight {
