--- a/style.css
+++ b/style.css
@@ -50,19 +50,17 @@ h1:hover {
 }
 
 .centered_box {
-    position: absolute;
+    position: relative;
     top: 50%;
-    left: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
 
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
 }
 
 .main_title {
     color: #659a9f; 
     font-size: 750%;
-    vertical-align: middle;
 }
 
 .lower_heading {
