--- a/style.css
+++ b/style.css
@@ -61,12 +61,12 @@ h1:hover {
 
 .main_title {
     color: #659a9f; 
-    font-size: 750%;
+    font-size: 60vw;
 }
 
 .lower_heading {
     color: #000;
-    font-size: 550%;
+    font-size: 32vw;
 }
 
 .highlight {
