--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1:hover {
 
 .main_title {
     color: #659a9f; 
-    font-size: 21vh;
+    font-size: 15vw;
     text-shadow: 0 0 20px #659a9f;
     
 }
