--- a/style.css
+++ b/style.css
@@ -1,41 +1,99 @@
+/* markdown  */
 * {
+    font-family: Helvetica; 
     margin: 0;
     padding: 0;
 }
 
-.center_text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    
-    transform: translate(-50%, -50%);
+a {
+    color: rgb(39, 39, 39);
+    text-decoration: none;
 }
 
-.lower_text {
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    
-    transform: translate(-50%, -80%);
+body, html {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-.container {
-    position: relative;
+h1 {
     text-align: center;
 }
 
-.header_text {
-    font-family: "Rubik Mono One";
-    font-size: 15vw;
-
-    -webkit-text-stroke: 4px #ffffff91;
-    color: transparent;
+p {
+    text-align: center
 }
 
-.lower_header_text {
-    font-family: "Rubik Mono One";
-    font-size: 5vw;
-
-    -webkit-text-stroke: 4px #00ffbf;
+/* effects */
+a:link, a:visited {
+    color: rgb(39, 39, 39);
+}
+  
+a:hover {
     color: transparent;
+    text-shadow: 0 0 20px #659a9f;
+    -webkit-text-stroke: 0.5px #2c4345;
+}
+
+h1:hover {
+    color: transparent;
+    -webkit-text-stroke: 3px #659a9f;
+}
+
+/* classes */
+.first_section {
+    background: linear-gradient(90deg, rgba(101, 154, 159, 0.4) 0%, rgba(151, 194, 199, 0.4) 100%);
+    height: 80vh; 
+    white-space: nowrap; 
+}
+
+.main_title {
+    color: #cadfdd; 
+    font-size: 15vw;
+    
+    font-family: "Rubik Mono One"; 
+    text-shadow: 0 0 20px #659a9f;
+}
+
+.lower_heading {
+    color: #000;
+    font-size: 10vh;
+    text-shadow: 0 0 20px #aaa;
+}
+
+/* utility classes */
+.centered_box {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+}
+
+.logo_box {
+    text-align: center;
+    height: 6em; 
+    width: 6em
+}
+
+.shrink_hover {
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+/* class effects */
+.lower_heading:hover {
+    text-shadow: 0 0 20px #659a9f;
+}
+
+.shrink_hover:hover, .shrink_hover:focus, .shrink_hover:active {
+    -webkit-transform: scale(0.95);
+    transform: scale(0.95);
 }
