--- a/style.css
+++ b/style.css
@@ -77,6 +77,12 @@ h1:hover {
     width: 100%; 
 }
 
+.smaller-spacer-bar {
+    background: linear-gradient(90deg, #fff 30%, #f4d35e 50%, #f4d35e 50%, #f4d35e 50%, #fff 70%);;
+    height: 1vh;
+    width: 100%; 
+}
+
 .closing-section {
     background: linear-gradient(0deg, #4b4e6d, #383b52);
     height: 40vh; 
@@ -86,13 +92,13 @@ h1:hover {
 /** text classes **/
 .main-title {
     color: #a0d2db; 
-    font-size: 15vw;
+    font-size: 20vw;
     text-shadow: 0 0 20px #bee7e868;
 }
 
 .lower-heading {
     color: #4b4e6d;
-    font-size: 10vh;
+    font-size: 8vh;
     text-shadow: 0 0 20px #4b4e6d;
 }
 
@@ -100,6 +106,11 @@ h1:hover {
 .cover {
     height: 13vw; 
     width: 13vw;
+}
+
+.logo {
+    height: 12vh;
+    width: 12vh; 
 }
 
 /* utility classes */
@@ -125,7 +136,6 @@ h1:hover {
 }
 
 /* class effects */
-
 .grow-hover:hover, .grow-hover:focus, .grow-hover:active {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
@@ -136,6 +146,7 @@ h1:hover {
     text-shadow: 0 0 20px #a0d2db;
 }
 
+/** animation hovers **/ 
 .rot-back:hover {
     transform: scale(1.1) rotate(6deg);
 }
