--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ div {
     white-space: nowrap;
 }
 
-/* effects */
+/* markdown effects */
 a:link, a:visited {
     color: var(--yellow);
 }
@@ -56,7 +56,16 @@ h1:hover {
 
 /* classes */
 
-/** sectional classes **/
+/* --> static classes */
+.centered-box {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+}
+
 .first-section {
     background: linear-gradient(180deg, var(--navy), var(--darknavy));
     height: 80vh; 
@@ -73,40 +82,50 @@ h1:hover {
     height: 35vh; 
 }
 
+.icon-container {
+    text-align: center
+}
+
 .closing-section {
     background: linear-gradient(0deg, var(--navy), var(--darknavy));
     height: 40vh; 
     white-space: nowrap;
 }
 
-/** spacer bars **/
+/* --> dynamic classes */ 
 
-.spacer-bar {
+/** spacer bars **/
+.spacer-bar, .smaller-spacer-bar {
     background: linear-gradient(90deg, var(--white) 10%, var(--yellow) 30%, var(--yellow) 70%, var(--white) 90%);;
     height: 1vh;
     width: 100%; 
 }
 
 .smaller-spacer-bar {
-    background: linear-gradient(90deg, var(--white) 30%, var(--yellow) 50%, var(--white) 70%);
-    height: 1vh;
-    width: 100%; 
+    background: linear-gradient(90deg, var(--white) 30%, var(--yellow) 50%, var(--white) 70%); 
 }
 
 /** text classes **/
+
+/** --> top box **/
 .main-title {
     color: var(--blue);  
     font-size: 20vw;
     text-shadow: 0 0 20px #bee7e868;
 }
 
-.lower-heading {
-    color: var(--navy);
-    font-size: 8vh;
-    text-shadow: 0 0 20px var(--navy);
+.main-title-caption {
+    font-size: 2.5vw; 
 }
 
-/** image classes **/
+.arrow {
+    color: transparent;
+    font-family: Helvetica; 
+    font-size: 8vh;  
+    -webkit-text-stroke: 2px #171717;
+}
+
+/** --> logo boxes **/
 .cover {
     height: 13vw; 
     width: 13vw;
@@ -117,26 +136,66 @@ h1:hover {
     width: 12vh; 
 }
 
-/* utility classes */
-.centered-box {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
+/** --> text **/
+.lower-heading {
+    color: var(--navy);
+    font-size: 8vh;
+    text-shadow: 0 0 20px var(--navy);
 }
 
-.grow-hover, .shrink-hover {
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+.text-box-title {
+    font-size: 4.2vh; 
+}
 
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
+.description {
+    font-size: 2.2vh; 
+}
 
-    -webkit-transition-property: transform;
-    transition-property: transform;
+.caption {
+    font-size: 2.2vh; 
+}
+
+/** --> closing box **/
+.last-title {
+    color: var(--blue);  
+    font-size: 14vw;
+    text-shadow: 0 0 20px #bee7e868;
+}
+
+@media only screen and (max-width: 900px) {
+    .spacer-bar, .smaller-spacer-bar { height: 0.9vh } 
+
+    .main-title { font-size: 20vw }
+    .main-title-caption { font-size: 2.8vw }
+    .arrow { font-size: 9vh }
+
+    .cover { height: 17vw; width: 17vw }
+    .logo { height: 15vh; width: 15vh }
+
+    .lower-heading { font-size: 8vh }
+    .text-box-title { font-size: 4.8vh }
+
+    .description { font-size: 2.3vh }
+    .caption { font-size: 2.2vh }
+    .last-title { font-size: 14vw }
+}
+
+@media only screen and (max-width: 600px) {
+    .spacer-bar, .smaller-spacer-bar { height: 0.7vh } 
+
+    .main-title { font-size: 24vw }
+    .main-title-caption { font-size: 3.1vw }
+    .arrow { font-size: 10vh }
+
+    .cover { height: 18vw; width: 18vw }
+    .logo { height: 13vh; width: 13vh }
+
+    .lower-heading { font-size: 7vh }
+    .text-box-title { font-size: 4.6vh }
+
+    .description { font-size: 2.3vh }
+    .caption { font-size: 2vh }
+    .last-title { font-size: 16vw }
 }
 
 /* ―――――――――――――――――――――――――――――――――――――――――― */
@@ -150,6 +209,18 @@ h1:hover {
 
 .lower-heading:hover {
     text-shadow: 0 0 20px var(--blue); 
+}
+
+.grow-hover, .shrink-hover {
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+
+    -webkit-transition-property: transform;
+    transition-property: transform;
 }
 
 /** rotational hovers **/ 
