--- a/new_style.css
+++ b/new_style.css
@@ -60,24 +60,26 @@ body, html {
     color: var(--white); 
 }
 
-.topbox img {
-    width: 20vw;
-    height: 20vw; 
-}
-
 /* --> classes */
 .topbox .lcorner-icon {
     color: var(--blue); 
     position: absolute; 
     text-align: left; 
     font-size: 2vw;
-    top: 5px; 
-    left: 5px; 
+    top: 1vw; 
+    left: 1vw; 
+}
+
+.topbox .lcorner-icon img {
+    height: 2vw; 
+    width: 2vw; 
 }
 
 /* --> effects */
-.topbox h1, .topbox a {
+.topbox h1, .topbox a, .topbox .lcorner-icon img {
     transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
 }
 
 .topbox h1:hover {
@@ -89,4 +91,9 @@ body, html {
 .topbox a:hover {
     color: #ffffff7d;
     text-shadow: 0 0 0.3em #ffffff7d;
+}
+
+.topbox .lcorner-icon img:hover {
+    color: var(--white); 
+    transform: scale(1.1);
 }
