--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ body, html {
     -ms-transform: translateY(-50%);
 }
 
+.emoji {
+    color: var(--blue); 
+    text-shadow: 0 3px 0.1em var(--navy);
+}
+
 /* topbox */ 
 /* --> md */
 .topbox {
@@ -145,9 +150,37 @@ body, html {
 .textdesc h4 {
     font-size: 1.4vw; 
 }
+
 /* --> classes */
 .textdesc .bg {
     background-image: url(assets/textdesc-background.svg); 
     height: 100%; 
     width: 100%;
 }
+
+@media only screen and (max-width: 600px) {
+    .topbox h1 { font-size: 20vw }
+    .topbox h2 { font-size: 6vw }
+    .topbox a { font-size: 5.4vw }
+    .topbox .tcorner-icon { font-size: 4vw }
+    .topbox .tcorner-icon img { height: 4vw; width: 4vw }
+    .topbox .bcorner-icon { font-size: 3.5vw }
+
+    .textdesc h1 { font-size: 8vw }
+    .textdesc h2 { font-size: 4.3vw }
+    .textdesc h3 { font-size: 3.8vw }
+}
+
+@media only screen and (max-width: 800px) {
+    .topbox h1 { font-size: 16vw }
+    .topbox h2 { font-size: 4.5vw }
+    .topbox a { font-size: 4.2vw }
+    .topbox .tcorner-icon { font-size: 3.2vw }
+    .topbox .tcorner-icon img { height: 3.2vw; width: 3.2vw }
+    .topbox .bcorner-icon { font-size: 2.7vw }
+
+    .textdesc h1 { font-size: 7vw }
+    .textdesc h2 { font-size: 3.8vw }
+    .textdesc h3 { font-size: 3.4vw }
+}
+
