--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body, html {
 }
 
 .topbox h1 {
-    font-size: 12vw; 
+    font-size: 14vw; 
     color: var(--blue);
     text-shadow: 0 0 1.4em var(--lightblue); 
 }
@@ -67,7 +67,7 @@ body, html {
 /* --> classes */
 .topbox .bg {
     background-size: cover; 
-    background-image: url(assets/topbox-text.svg); 
+    background-image: url(assets/backgrounds/topbox-text.svg); 
     width: 100%; 
     height: 100%;
 
@@ -97,6 +97,15 @@ body, html {
     font-size: 1.2vw; 
     bottom: 1vw; 
     right: 1vw; 
+}
+
+.topbox .arrow {
+    width: 100%;
+    height: 20vh;
+    top: 80vh; 
+    position: absolute;
+    font-size: 10vh; 
+    color: #ffffff7d; 
 }
 
 /* --> effects */
@@ -148,7 +157,7 @@ body, html {
 
 /* --> classes */
 .textdesc .bg {
-    background-image: url(assets/textdesc-background.svg); 
+    background-image: url(assets/backgrounds/textdesc-background.svg); 
     height: 100%; 
     width: 100%;
 }
@@ -158,30 +167,17 @@ body, html {
     text-shadow: 0 3px 0.1em var(--navy);
 }
 
-@media only screen and (max-width: 600px) {
-    .topbox h1 { font-size: 20vw }
-    .topbox h2 { font-size: 6vw }
-    .topbox a { font-size: 5.4vw }
-    .topbox .tcorner-icon { font-size: 4vw }
-    .topbox .tcorner-icon img { height: 4vw; width: 4vw }
-    .topbox .bcorner-icon { font-size: 3.5vw }
+@media only screen and (max-width: 1400px) {
+    .topbox h1 { font-size: 12.3vw }
+    .topbox h2 { font-size: 3.9vw }
+    .topbox a { font-size: 2.5vw }
+    .topbox .tcorner-icon { font-size: 2.5vw }
+    .topbox .tcorner-icon img { height: 2.5vw; width: 2.5vw }
+    .topbox .bcorner-icon { font-size: 2vw }
 
-    .textdesc h1 { font-size: 8vw }
-    .textdesc h2 { font-size: 4.3vw }
-    .textdesc h3 { font-size: 3.8vw }
-}
-
-@media only screen and (max-width: 800px) {
-    .topbox h1 { font-size: 16vw }
-    .topbox h2 { font-size: 4.5vw }
-    .topbox a { font-size: 4.2vw }
-    .topbox .tcorner-icon { font-size: 3.2vw }
-    .topbox .tcorner-icon img { height: 3.2vw; width: 3.2vw }
-    .topbox .bcorner-icon { font-size: 2.7vw }
-
-    .textdesc h1 { font-size: 7vw }
-    .textdesc h2 { font-size: 3.8vw }
-    .textdesc h3 { font-size: 3.4vw }
+    .textdesc h1 { font-size: 5vw }
+    .textdesc h2 { font-size: 2.3vw }
+    .textdesc h3 { font-size: 1.8vw }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -197,16 +193,32 @@ body, html {
     .textdesc h3 { font-size: 2.8vw }
 }
 
-@media only screen and (max-width: 1400px) {
-    .topbox h1 { font-size: 12.3vw }
-    .topbox h2 { font-size: 3.9vw }
-    .topbox a { font-size: 2.5vw }
-    .topbox .tcorner-icon { font-size: 2.5vw }
-    .topbox .tcorner-icon img { height: 2.5vw; width: 2.5vw }
-    .topbox .bcorner-icon { font-size: 2vw }
+@media only screen and (max-width: 800px) {
+    .topbox h1 { font-size: 16vw }
+    .topbox h2 { font-size: 4.5vw }
+    .topbox a { font-size: 4.2vw }
+    .topbox .tcorner-icon { font-size: 3.2vw }
+    .topbox .tcorner-icon img { height: 3.2vw; width: 3.2vw }
+    .topbox .bcorner-icon { font-size: 2.7vw }
 
-    .textdesc h1 { font-size: 5vw }
-    .textdesc h2 { font-size: 2.3vw }
-    .textdesc h3 { font-size: 1.8vw }
+    .textdesc h1 { font-size: 7vw }
+    .textdesc h2 { font-size: 3.8vw }
+    .textdesc h3 { font-size: 3.4vw }
 }
+
+
+@media only screen and (max-width: 600px) {
+    .topbox h1 { font-size: 20vw }
+    .topbox h2 { font-size: 6vw }
+    .topbox a { font-size: 5.4vw }
+    .topbox .tcorner-icon { font-size: 4vw }
+    .topbox .tcorner-icon img { height: 4vw; width: 4vw }
+    .topbox .bcorner-icon { font-size: 3.5vw }
+
+    .textdesc h1 { font-size: 8vw }
+    .textdesc h2 { font-size: 4.3vw }
+    .textdesc h3 { font-size: 3.8vw }
+}
+
+
 
