--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   }
 }
 * {
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 300px;
   font-weight: 100;
@@ -17,7 +18,6 @@
 }
 
 a, a:visited {
-  color: white;
   text-decoration: none;
   transition-property: background-color, color, padding;
   transition-duration: 0.5s;
@@ -45,7 +45,7 @@ header div {
   display: flex;
   justify-content: center;
   height: 40px;
-  width: 40%;
+  width: 50%;
 }
 header div a, header div a:visited {
   align-items: center;
@@ -55,7 +55,7 @@ header div a, header div a:visited {
   font-size: 6%;
   height: 100%;
   text-decoration: none;
-  width: 25%;
+  width: 30%;
 }
 header div a:hover, header div a:visited:hover {
   background-color: white;
@@ -65,7 +65,8 @@ header div a:hover, header div a:visited:hover {
 
 .about-me p {
   text-align: center;
-  height: 30%;
+  height: -moz-fit-content;
+  height: fit-content;
   width: 60%;
   transition: 0.3s filter ease-in-out;
   font-size: 9%;
@@ -105,15 +106,9 @@ header div a:hover, header div a:visited:hover {
   padding: 5px;
 }
 
-@media screen and (max-width: 1300px) {
-  .about-me p {
-    height: 30%;
-  }
-}
 @media screen and (max-width: 1000px) {
   .about-me p {
     font-size: 8%;
-    height: 40%;
     width: 80%;
   }
 }
@@ -121,10 +116,22 @@ header div a:hover, header div a:visited:hover {
   * {
     font-size: 120px;
   }
+  header div {
+    width: 40%;
+  }
   header div a, header div a:visited {
     font-size: 10%;
+    width: 33%;
   }
   .about-me {
     font-size: 180%;
+  }
+}
+@media screen and (max-width: 500px) {
+  header div {
+    width: 80%;
+  }
+  header div a, header div a:visited {
+    font-size: 10%;
   }
 }/*# sourceMappingURL=style.css.map */
