--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,10 @@
     overflow: hidden;
     padding: 0px;
     text-align: center;
+
+    body {
+        background: black;
+    }
 }
 
 a, a:visited {
@@ -26,10 +30,21 @@ a, a:visited {
     transition-duration: 0.5s;
 }
 
+.background {
+    aspect-ratio: 0.666;
+    filter: invert(1);
+    height: 120vh;
+    left: 50%;
+    opacity: 0.2;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1000;
+}
+
 header {
     @include flex; 
 
-    background: black;
     flex-direction: column;
     color: white;
     height: 100vh;
